tests/parser/tests/cases/should_fail/spread_pattern_in_namespace_pattern/case.hash
// Spread patterns are disallowed within namespaces
{ x,  ...d} := foo();
